# Aether

./: .env.example  .env.production  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  run-all.sh  turbo.json  vercel.json
.github/workflows/: backend.yml  ci.yml  frontend.yml  python.yml  rust.yml
apps/ai-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/ai-service/app/: main.py
apps/ai-service/app/api/: dependencies.py
apps/ai-service/app/api/routes/: chat.py  documents.py  embeddings.py  health.py  search.py  transcription.py  video_intelligence.py
apps/ai-service/app/core/: config.py  logger.py  security.py
apps/ai-service/app/loaders/: __init__.py  docx_loader.py  excel_loader.py  pdf_loader.py  video_loader.py
apps/ai-service/app/schemas/: chat.py  embeddings.py  search.py  transcription.py
apps/ai-service/app/services/: audio_extract.py  chunker.py  document_service.py  embedding_service.py  llm_service.py  pipeline.py  rag_service.py  vector_service.py  whisper_service.py
apps/api/: .dockerignore  .env.example  Dockerfile  package.json  (+1 more)
apps/rust-worker/: Cargo.toml  Dockerfile
apps/rust-worker/src/: main.rs
apps/rust-worker/src/config/: env.rs  mod.rs
apps/rust-worker/src/ffmpeg/: extract_audio.rs  generate_clip.rs  get_metadata.rs  mod.rs  thumbnails.rs
apps/rust-worker/src/queue/: jobs.rs  mod.rs  redis_client.rs
apps/rust-worker/src/services/: clip_service.rs  mod.rs  processing_service.rs  video_service.rs
apps/rust-worker/src/streaming/: mod.rs  websocket.rs
apps/rust-worker/src/types/: clip.rs  job.rs  mod.rs  status.rs  video.rs
apps/rust-worker/src/utils/: errors.rs  helpers.rs  logger.rs  mod.rs
apps/rust-worker/src/workers/: clip_worker.rs  mod.rs  queue_worker.rs  video_worker.rs
(+134 files in other folders)
